--- a/.github/workflows/branches-ignore-script.yml
+++ b/.github/workflows/branches-ignore-script.yml
@@ -6,7 +6,7 @@ name: Build and deploy JAR app to Azure Web App - kinoxp
 on:
   push:
     branches-ignore:
-      - master
+      - something
   workflow_dispatch:
 
 jobs:
