--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=drop
+#spring.jpa.hibernate.ddl-auto=create
+
 
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_USERNAME}
